MIFOSX-322: update apidocs, remove legacy sql files.

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -2054,8 +2054,11 @@ GET https://DomainName/api/v1/clients/{clientId}
 					<p>Example Requests:</p>
 					<div class=apiClick>clients</div>
 					<br>
-					<br>
 					<div class=apiClick>clients?fields=displayName,officeName,joinedDate</div>
+					<br>
+					<div class=apiClick>clients?offset=10&limit=50</div>
+					<br>
+					<div class=apiClick>clients?orderBy=displayName,sortOrder=DESC</div>
 				</div>
 				<div class="method-example">
 					<code class="method-declaration">
