MIFOSX-339: update api docs to document way of by passing limit on list capability of centers,groups,clients and journal entries api.

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -1894,7 +1894,7 @@ GET https://DomainName/api/v1/clients/{clientId}
 						<dd>
 							Integer <span>optional</span>, defaults to 200
 						</dd>
-						<dd>Restricts the size of results returned.</dd>
+						<dd>Restricts the size of results returned. To override the default and return all entries you must explicitly pass a non-positive integer value for limit e.g. limit=0, or limit=-1</dd>
 
 						<dt>orderBy</dt>
 						<dd>
@@ -3067,7 +3067,7 @@ GET https://DomainName/mifosng-provider/api/v1/centers/9?associations=groupMembe
 						<dd>
 							Integer <span>optional</span>, defaults to 200
 						</dd>
-						<dd>Restricts the size of results returned.</dd>
+						<dd>Restricts the size of results returned. To override the default and return all entries you must explicitly pass a non-positive integer value for limit e.g. limit=0, or limit=-1</dd>
 
 						<dt>orderBy</dt>
 						<dd>
@@ -3600,7 +3600,7 @@ DELETE groups/2
 						<dd>
 							Integer <span>optional</span>, defaults to 200
 						</dd>
-						<dd>Restricts the size of results returned.</dd>
+						<dd>Restricts the size of results returned. To override the default and return all entries you must explicitly pass a non-positive integer value for limit e.g. limit=0, or limit=-1</dd>
 
 						<dt>orderBy</dt>
 						<dd>
@@ -12972,7 +12972,7 @@ No Request Body:
 						<dd>
 							Integer <span>optional</span>, defaults to 200
 						</dd>
-						<dd>Restricts the size of results returned.</dd>
+						<dd>Restricts the size of results returned. To override the default and return all entries you must explicitly pass a non-positive integer value for limit e.g. limit=0, or limit=-1</dd>
 
 						<dt>orderBy</dt>
 						<dd>
